@@ -1,9 +1,11 @@
 package com.genezeiniss.pos_transaction_processor.service;
 
-import com.genezeiniss.pos_transaction_processor.domain.Transaction;
+import com.genezeiniss.pos_transaction_processor.domain.TransactionMetadata;
 import com.genezeiniss.pos_transaction_processor.domain.enums.PaymentMethod;
 import com.genezeiniss.pos_transaction_processor.exception.ValidationException;
 import com.genezeiniss.pos_transaction_processor.fixture.TransactionFixture;
+import com.genezeiniss.pos_transaction_processor.repository.TransactionMetadataRepository;
+import com.genezeiniss.pos_transaction_processor.repository.TransactionRepository;
 import com.genezeiniss.pos_transaction_processor.service.transaction_processor.TransactionProcessor;
 import com.genezeiniss.pos_transaction_processor.service.transaction_processor.TransactionProcessorFactory;
 import org.junit.jupiter.api.DisplayName;
@@ -17,7 +19,6 @@ import java.math.BigDecimal;
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.*;
 
@@ -30,37 +31,84 @@ public class TransactionServiceTest {
     @Mock
     private TransactionProcessor transactionProcessor;
 
+    @Mock
+    private TransactionRepository transactionRepository;
+
+    @Mock
+    private TransactionMetadataRepository transactionMetadataRepository;
+
     @InjectMocks
     private TransactionService transactionService;
 
     @Test
-    @DisplayName("process transaction with valid transaction")
+    @DisplayName("process transaction with valid transaction and metadata")
     void processTransaction() {
-        Transaction transaction = TransactionFixture.stubTransaction(PaymentMethod.CASH, new BigDecimal("1.0"), null);
+        var transaction = TransactionFixture.stubTransaction(PaymentMethod.CASH, new BigDecimal("1.0"));
+        List<TransactionMetadata> metadata = List.of();
 
         when(processorFactory.getTransactionProcessor(PaymentMethod.CASH)).thenReturn(transactionProcessor);
-        when(transactionProcessor.validateTransaction(transaction)).thenReturn(Collections.emptyList());
+        doNothing().when(transactionProcessor).validateTransactionOrException(transaction, metadata);
+        doNothing().when(transactionProcessor).processTransaction(transaction);
 
-        transactionService.processTransaction(transaction);
+        transactionService.processTransaction(transaction, metadata);
 
         verify(processorFactory).getTransactionProcessor(PaymentMethod.CASH);
-        verify(transactionProcessor).validateTransaction(transaction);
+        verify(transactionProcessor).validateTransactionOrException(transaction, metadata);
         verify(transactionProcessor).processTransaction(transaction);
     }
 
     @Test
-    @DisplayName("process transaction with invalid transaction")
-    void processInvalidTransaction() {
-        Transaction transaction = TransactionFixture.stubTransaction(PaymentMethod.BANK_TRANSFER, new BigDecimal("1.0"), null);
-        List<String> errors = List.of("Missing required field: bank", "Missing required field: accountNumber");
+    @DisplayName("process transaction: validation failure")
+    void validationFailure() {
+        var transaction = TransactionFixture.stubTransaction(PaymentMethod.BANK_TRANSFER, new BigDecimal("1.0"));
+        List<TransactionMetadata> metadata = Collections.emptyList();
 
         when(processorFactory.getTransactionProcessor(PaymentMethod.BANK_TRANSFER)).thenReturn(transactionProcessor);
-        when(transactionProcessor.validateTransaction(transaction)).thenReturn(errors);
+        doThrow(ValidationException.class)
+                .when(transactionProcessor).validateTransactionOrException(transaction, metadata);
 
-        ValidationException exception = assertThrows(ValidationException.class,
-                () -> transactionService.processTransaction(transaction));
+        assertThrows(ValidationException.class,
+                () -> transactionService.processTransaction(transaction, metadata));
 
-        assertEquals(String.format("%s; %s", errors.get(0), errors.get(1)), exception.getMessage());
         verify(transactionProcessor, never()).processTransaction(transaction);
+        verifyNoInteractions(transactionRepository, transactionMetadataRepository);
+    }
+
+    @Test
+    @DisplayName("process transaction should persist transaction and metadata successfully")
+    void persistTransactionAndMetadata() {
+        var transaction = TransactionFixture.stubTransaction(PaymentMethod.CASH_ON_DELIVERY, new BigDecimal("1.0"));
+        var metadata = TransactionFixture.stubTransactionMetadata("courier", "yamato");
+        var metadataList = List.of(metadata);
+
+        when(processorFactory.getTransactionProcessor(PaymentMethod.CASH_ON_DELIVERY)).thenReturn(transactionProcessor);
+        doNothing().when(transactionProcessor).validateTransactionOrException(transaction, metadataList);
+        doNothing().when(transactionProcessor).processTransaction(transaction);
+
+        when(transactionRepository.create(transaction)).thenReturn(transaction);
+        when(transactionMetadataRepository.create(metadata)).thenReturn(metadata);
+
+        transactionService.processTransaction(transaction, metadataList);
+
+        verify(transactionRepository).create(transaction);
+        verify(transactionMetadataRepository).create(metadata);
+    }
+
+    @Test
+    @DisplayName("process transaction with empty metadata")
+    void persistTransactionOnly() {
+        var transaction = TransactionFixture.stubTransaction(PaymentMethod.CASH, new BigDecimal("1.0"));
+        List<TransactionMetadata> metadata = Collections.emptyList();
+
+        when(processorFactory.getTransactionProcessor(PaymentMethod.CASH)).thenReturn(transactionProcessor);
+        doNothing().when(transactionProcessor).validateTransactionOrException(transaction, metadata);
+        doNothing().when(transactionProcessor).processTransaction(transaction);
+
+        when(transactionRepository.create(transaction)).thenReturn(transaction);
+
+        transactionService.processTransaction(transaction, metadata);
+
+        verify(transactionRepository).create(transaction);
+        verify(transactionMetadataRepository, never()).create(any());
     }
 }
